src/compile_warnings.txt
./stage/value/value_destroy/value_destroy.c: In function ‘value_destroy’:
./stage/value/value_destroy/value_destroy.c:9:5: warning: implicit declaration of function ‘value_direct_destroy’; did you mean ‘value_destroy’? [-Wimplicit-function-declaration]
    9 |     value_direct_destroy(*value);
      |     ^~~~~~~~~~~~~~~~~~~~
      |     value_destroy
./stage/value/value_destroy/value_destroy.c:11:5: warning: implicit declaration of function ‘memory_destroy’ [-Wimplicit-function-declaration]
   11 |     memory_destroy(value);
      |     ^~~~~~~~~~~~~~
./stage/value/value_direct_destroy/value_direct_destroy.c:3:6: error: conflicting types for ‘value_direct_destroy’; have ‘void(value_t)’
    3 | void value_direct_destroy(value_t value)
      |      ^~~~~~~~~~~~~~~~~~~~
In file included from ./stage/value/value_direct_destroy/value_direct_destroy.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/stage/value/value_direct_destroy/value_direct_destroy.h:7:6: note: previous declaration of ‘value_direct_destroy’ with type ‘void(value_t *)’
    7 | void value_direct_destroy(value_t* value);
      |      ^~~~~~~~~~~~~~~~~~~~
./stage/value/value_direct_destroy/value_direct_destroy.c: In function ‘value_direct_destroy’:
./stage/value/value_direct_destroy/value_direct_destroy.c:8:17: warning: implicit declaration of function ‘memory_destroy’ [-Wimplicit-function-declaration]
    8 |                 memory_destroy(value.raw.string_value);
      |                 ^~~~~~~~~~~~~~
./stage/value/value_log/value_log.c: In function ‘value_log’:
./stage/value/value_log/value_log.c:6:9: warning: implicit declaration of function ‘log_info’ [-Wimplicit-function-declaration]
    6 |         log_info("Value: NULL\n");
      |         ^~~~~~~~
